# AI-hackathon-2

./: .env  .python-version  Dockerfile  README.md  [항해 플러스] AI 해커톤 발표_2조.pptx  db_df.csv  docker-compose.yaml  pyproject.toml  setting.json  todo.md  wdb_df.csv  파인튜닝모델.ipynb
app/: config.py  main.py
app/ai/: tredi.py
app/db/: __init__.py
app/routers/: favorites_router.py  task_router.py  tasks_router.py
chroma/: chroma.sqlite3
mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/mysql/: general_log_212.sdi  slow_log_213.sdi
mysql/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  (+81 more)
resources/: df_final.csv
(+4 files in other folders)
